# qaoa-airport-optimisation

./: .gitignore  README.md  pyproject.toml  qaoa_airport.py (Complete Code)  requirements.txt
Project Usage/: README.MD
Results/: Data Obtained
docs/: portfolio_guide.md
scripts/: run_optimization.py
src/qaoa_airport/: __init__.py  classical_solvers.py  data.py  main.py  qaoa.py  qubo.py  visualization.py
